fixed news feed section alignment issue and loader issue

--- a/src/app/pages/case-management/components/policy-violation-summary/policy-violation-summary.component.scss
+++ b/src/app/pages/case-management/components/policy-violation-summary/policy-violation-summary.component.scss
@@ -165,7 +165,7 @@ app-policy-violation-summary{
         }
 
         .time {
-          font-size: 13px;
+          font-size: 12px;
           display: inline-block;
           width: 70px;
         }
